--- a/web/react/demo/src/learn/16.Router/02.BackstageManagementSystem/components/Layout/index.css
+++ b/web/react/demo/src/learn/16.Router/02.BackstageManagementSystem/components/Layout/index.css
@@ -40,6 +40,5 @@ html, body, #root {
   right: 0;
   left: 200px;
   bottom: 0;
-  background-color: lightpink;
-  overflow: hidden;
+  overflow: auto;
 }
